# scamplers

./: .env.compose.sample  .env.sample  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  bar.py  check-schema.sh  compose.dev.yaml  compose.prod.yaml  compose.yaml  f.json  foo.py  hard-restart.dev.sh  initial-data.dev.json  scamplers-api.Dockerfile  scamplers-jsonschema.json  scamplers-ui.Dockerfile  seed_data.sample.json  start-compilation-db.sh  start-scamplers-api.dev.sh  start-scamplers-frontend.dev.sh
deprecated/: Cargo.toml
deprecated/src/: client.rs  dev_container.rs  result.rs  server.rs  state.rs
deprecated/src/db/: models.rs  seed_data.rs  util.rs
deprecated/src/db/models/chromium_run/: common.rs  create.rs  ocm.rs
deprecated/src/db/models/institution/: create.rs
deprecated/src/db/models/lab/: create.rs  read.rs
deprecated/src/db/models/multiplexing_tag/: read.rs
deprecated/src/db/models/nucleic_acid/: library.rs
deprecated/src/db/models/person/: create.rs  read.rs
deprecated/src/db/models/specimen/: suspension.rs  update.rs
deprecated/src/server/: api.rs
non-empty-string/: Cargo.toml
non-empty-string/src/: lib.rs
python/test-scamplepy/: pyproject.toml
python/test-scamplepy/src/test-scamplepy/: test_live.py
python/test-scamplepy/src/test_scamplepy/: test_client.py  test_live.py  test_requests.py
python/test_scamplers-core/: pyproject.toml
python/test_scamplers-core/src/test_scamplers_core/: test_attribute_access.py  test_client.py  test_live.py  test_requests.py  test_responses.py
python/test_scamplers-core/src/test_scamplers_core/test-data/: cellranger_multi.csv
rust/: Cargo.toml  Dockerfile  foo  foo.txt  rustfmt.toml  start-backend.dev.sh  test.sh
rust/.cargo/: config.toml
rust/any-value/: Cargo.toml
rust/any-value/src/: lib.rs
rust/scamplepy/: Cargo.toml  pyproject.toml
rust/scamplepy/scamplepy/: __init__.py  __init__.pyi
rust/scamplepy/scamplepy/common/: __init__.py  __init__.pyi
rust/scamplepy/scamplepy/create/: __init__.py  __init__.pyi
rust/scamplepy/scamplepy/errors/: __init__.py  __init__.pyi
rust/scamplepy/scamplepy/query/: __init__.py  __init__.pyi
rust/scamplepy/scamplepy/requests/: create.pyi  query.pyi  read.pyi  update.pyi
rust/scamplepy/scamplepy/responses/: __init__.py  __init__.pyi
rust/scamplepy/scamplepy/update/: __init__.py  __init__.pyi
rust/scamplepy/src/: lib.rs  main.rs
rust/scamplers/: Cargo.toml
rust/scamplers-backend/: Cargo.toml
rust/scamplers-backend/src/: db.rs  lib.rs  result.rs  server.rs
rust/scamplers-backend/src/db/: error.rs  model.rs  seed_data.rs  test_util.rs  util.rs
rust/scamplers-backend/src/db/model/: cdna.rs  chromium_run.rs  dataset.rs  dataset_metadata.rs  institution.rs  lab.rs  library.rs  multiplexed_suspension.rs  multiplexing_tag.rs  person.rs  sample_metadata.rs  sequencing_run.rs  specimen.rs  suspension.rs  suspension_pool.rs
rust/scamplers-backend/src/db/seed_data/: admin.rs  chemistry.rs  index_set.rs  library_type_specification.rs
rust/scamplers-backend/src/server/: api.rs  auth.rs  util.rs
rust/scamplers-backend/tests/: integration.rs
rust/scamplers-core/: Cargo.toml  pyproject.toml  scamplers-core.pyi
rust/scamplers-core/scamplers_core/: __init__.py  __init__.pyi  scamplers_core.pyi
rust/scamplers-core/scamplers_core/_baseclass/: __init__.pyi
rust/scamplers-core/scamplers_core/errors/: __init__.pyi
rust/scamplers-core/scamplers_core/requests/: __init__.py  __init__.pyi
rust/scamplers-core/scamplers_core/responses/: __init__.py  __init__.pyi
rust/scamplers-core/src/: api_path.rs  client.rs  endpoint.rs  lib.rs  model.rs  result.rs  string.rs
rust/scamplers-core/src/model/: chemistry.rs  chromium_run.rs  dataset.rs  dataset_metadata.rs  institution.rs  lab.rs  library_type_specification.rs  nucleic_acid.rs  person.rs  sequencing_run.rs  specimen.rs  suspension.rs  units.rs
rust/scamplers-macros/: Cargo.toml
rust/scamplers-macros/src/: lib.rs
rust/scamplers-macros/src/macros/: backend.rs
rust/scamplers-schema/: Cargo.toml  build.rs
rust/scamplers-schema/src/: lib.rs
rust/scamplers/src/: app.rs  auth.rs  client.rs  config.rs  db.rs  dev_container.rs  endpoints.rs  extract.rs  lib.rs  macros.rs  main.rs  result.rs  routes.rs  server.rs  state.rs
rust/scamplers/src/app/: extract.rs
rust/scamplers/src/db/: models.rs  seed_data.rs  tenx_url_validator.rs  test_util.rs  util.rs  validators.rs
rust/scamplers/src/extract/: base64_json_query.rs  path.rs  valid_json.rs
rust/scamplers/src/routes/: institution.rs  library_type_specification.rs
rust/scamplers/src/server/: api.rs  endpoints.rs  extract.rs
rust/scamplers/tests/: integration.rs
rust/time/: Cargo.toml
rust/time/src/: lib.rs
rust/uuid/: Cargo.toml
rust/uuid/src/: lib.rs
rust/valid-string/: Cargo.toml
rust/valid-string/src/: lib.rs
scamplers-api/: Cargo.toml
scamplers-api/src/: api.rs  config.rs  db.rs  initial_data.rs  lib.rs  main.rs  state.rs  validate.rs
scamplers-api/src/api/: auth.rs  error.rs  extract.rs  routes.rs
scamplers-api/src/api/extract/: auth.rs  valid_json.rs
scamplers-api/src/api/routes/: people.rs  person.rs
scamplers-api/src/db/: boxed_filter.rs  error.rs  operation.rs  utils.rs
scamplers-api/src/validate/: initial_data.rs  institutions.rs  lab.rs  people.rs  person.rs
scamplers-jsonschema/: Cargo.toml
scamplers-jsonschema/src/: main.rs
scamplers-models/: Cargo.toml
scamplers-models/json-schema/: institution.json  institutionquery.json
scamplers-models/macro-attributes/: Cargo.toml
scamplers-models/macro-attributes/src/: lib.rs
scamplers-models/macros/src/: lib.rs
scamplers-models/src/: generic_order_by.rs  generic_query.rs  institution.rs  lab.rs  lib.rs  links.rs  main.rs  person.rs  specimen.rs  utils.rs
scamplers-models/src/institution/: common.rs  creation.rs  query.rs  read.rs
scamplers-models/src/lab/: common.rs  creation.rs  query.rs  read.rs
scamplers-models/src/person/: common.rs  creation.rs  query.rs  read.rs
scamplers-models/src/specimen/: creation.rs
(+422 files in other folders)
