[workspace]
members = [
  "default-vec",
  "non-empty-string",
  "scamplers-api",
  "scamplers-models",
  "scamplers-models/macro-attributes",
  "scamplers-schema",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.6", default-features = false, features = [
  "http2",
  "json",
  "macros",
  "tokio",
] }
axum-extra = { version = "0.10.3", features = [
  "typed-header",
  "typed-routing",
] }
bon = { version = "3.8.1" }
camino = { version = "1.2.1", features = ["serde1"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
csv = { version = "1.4.0" }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.3.2", default-features = false }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = { version = "0.15.7" }
heck = { version = "0.5.0" }
jiff = { version = "0.2.15", features = ["serde"] }
jiff-diesel = { version = "0.1.3", features = ["postgres"] }
pretty_assertions = { version = "1.4.1" }
proc-macro2 = { version = "1.0.95" }
quote = { version = "1.0.41" }
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
rstest = { version = "0.26.1", default-features = false }
schemars = { version = "1.0.4", features = ["jiff02", "url2", "uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-qs = { version = "0.15.0", features = ["axum"] }
serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.108", default-features = false, features = ["parsing"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = { version = "0.1.41" }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[workspace.lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
async_fn_in_trait = "allow"
