[package]
edition.workspace = true
name = "scamplers"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "scamplers"
required-features = ["app"]

[dependencies]
any-value = { path = "../any-value" }
anyhow = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
bon = { workspace = true }
csv = { workspace = true }
dotenvy = { workspace = true }
garde = { workspace = true }
heck = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
scamplers-macros = { path = "../scamplers-macros" }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { path = "../time" }
url = { workspace = true }
uuid = { path = "../uuid" }
valid-string = { path = "../valid-string" }
valuable = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
camino = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
deadpool-diesel = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
scamplers-schema = { path = "../scamplers-schema", optional = true }
testcontainers-modules = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[features]
app = [
  "any-value/app",
  "axum/tokio",
  "camino",
  "clap",
  "deadpool-diesel",
  "diesel",
  "diesel_migrations",
  "futures",
  "rand",
  "scamplers-schema",
  "testcontainers-modules",
  "time/app",
  "tokio",
  "tower",
  "tower-http",
  "tracing",
  "tracing-appender",
  "tracing-subscriber",
  "uuid/app",
  "valid-string/app",
]
python = [
  "any-value/python",
  "pyo3",
  "time/python",
  "tokio",
  "uuid/python",
  "valid-string/python",
]


[lints]
workspace = true
