[workspace]
resolver = "3"
members = [
    "any-value",
    "scamplepy",
    "scamplers",
    "scamplers-macros",
    "scamplers-schema",
    "time",
    "uuid",
    "valid-string",
]
default-members = ["scamplers"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
base64 = { version = "0.22.1" }
csv = { version = "1.3.1" }
heck = { version = "0.5.0" }
js-sys = { version = "0.3.77" }
clap = { version = "4.5.40", features = ["derive", "env"] }
anyhow = "1.0.98"
axum = { version = "0.8.4", default-features = false, features = [
    "http2",
    "json",
    "macros",
    "query",
] }
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
regex = "1.11.1"
axum-extra = { version = "0.10.1", features = ["typed-header", "query"] }
camino = { version = "1.1.10", features = ["serde1"] }
thiserror = "2.0.12"
_uuid = { package = "uuid", version = "1.18.1", features = ["serde", "v7"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
diesel = { version = "2.2.11", default-features = false, features = [
    "postgres",
    "without-deprecated",
    "time",
    "uuid",
    "serde_json",
    "32-column-tables",
] }
_time = { package = "time", version = "0.3.41", features = [
    "serde-human-readable",
] }
futures = { version = "0.3.31" }
valuable = { version = "0.1.1", features = ["derive"] }
garde = { version = "0.22.0", features = ["derive", "email", "serde", "regex"] }
strum = { version = "0.27.1", features = ["derive"] }
scraper = { version = "0.23.1", features = ["serde"] }
wasm-bindgen = { version = "0.2.100", features = ["enable-interning"] }
dotenvy = { version = "0.15.7" }
testcontainers-modules = { version = "0.11.6", features = [
    "postgres",
    "blocking",
] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
tracing-appender = "0.2.3"
tracing = { version = "0.1.41", features = ["valuable"] }
tower = { version = "0.5.2", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
argon2 = "0.5.3"
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
rand = "0.9.1"
reqwest = { version = "0.12.20", default-features = false, features = [
    "rustls-tls",
    "http2",
    "charset",
    "json",
] }
url = { version = "2.5.4", features = ["serde"] }
syn = { version = "2.0.102", features = ["full"] }
quote = { version = "1.0.40" }
proc-macro2 = { version = "1.0.95" }
serde-wasm-bindgen = { version = "0.6.5" }
wasm-bindgen-futures = { version = "0.4.50" }
pretty_assertions = { version = "1.4.1" }
rstest = { version = "0.25.0", default-features = false }
pyo3 = { version = "0.26.0", features = [
    "uuid",
    "time",
    "experimental-async",
    "multiple-pymethods",
    "serde",
    "anyhow",
] }
pyo3-stub-gen = { version = "0.13.1", default-features = false }
bon = { version = "3.6.4" }
derive_more = { version = "2.0.1", features = ["try_into", "from"] }
getrandom = { version = "0.3.3" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
get_first = "allow"
missing_panics_doc = "allow"
unsafe_derive_deserialize = "allow"
too_many_arguments = "allow"
missing_errors_doc = "allow"

[workspace.lints.rust]
async_fn_in_trait = "allow"
