[project]
name = "test-scamplepy"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Ahmed Said", email = "ahmed.said@jax.org" }]
requires-python = ">=3.13"
dependencies = [
    "maturin>=1.9.2",
    "maturin-import-hook>=0.3.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "scamplepy",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
scamplepy = { path = "../../rust/scamplepy", editable = true }

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
ignore = ["E402", "F403", "F405"]
