[project]
name = "test-scamplers-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Said", email = "ahmed.said@jax.org" }
]
requires-python = ">=3.13"
dependencies = [
    "maturin-import-hook>=0.3.0",
    "pytest>=8.4.1",
    "scamplers-core",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
scamplers-core = { path = "../../rust/scamplers-core", editable = true }

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
ignore = ["E402"]
