[package]
name = "any-value"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde_json = { workspace = true, optional = true }
serde = { workspace = true }
diesel-async = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
valuable = { workspace = true }
pyo3 = { workspace = true, optional = true }

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[features]
backend = ["serde_json", "diesel"]
python = ["pyo3", "serde_json"]
