[package]
name = "any-value"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true, optional = true }
valuable = { workspace = true }
pyo3 = { workspace = true, optional = true }
heck = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[features]
app = ["diesel"]
python = ["pyo3"]
