[project]
name = "scamplepy"
dynamic = ["version"]
authors = [{ name = "Ahmed Said", email = "ahmed.said@jax.org" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.ruff]
exclude = ["scamplepy/**/__init__.py"]
lint = { ignore = ["F403", "F405", "F811"] }
