[package]
name = "scamplers-core"
version = "0.1.0"
edition = { workspace = true }
publish = false

[lib]
name = "scamplers_core"
crate-type = ["lib", "cdylib"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true, optional = true }
time = { path = "../time" }
valuable = { workspace = true }
strum = { workspace = true }
scraper = { workspace = true }
wasm-bindgen = { workspace = true }
garde = { workspace = true }
scamplers-schema = { path = "../scamplers-schema", optional = true }
uuid = { path = "../uuid" }
scamplers-macros = { path = "../scamplers-macros" }
reqwest = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
pyo3 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
backend = ["diesel", "scamplers-schema", "uuid/backend", "time/backend"]

[lints]
workspace = true
