[package]
name = "scamplers-core"
version = "0.1.0"
edition = { workspace = true }
publish = false

[lib]
name = "scamplers_core"
crate-type = ["lib", "cdylib"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true, optional = true }
time = { path = "../time" }
valuable = { workspace = true }
strum = { workspace = true }
scraper = { workspace = true }
garde = { workspace = true }
scamplers-schema = { path = "../scamplers-schema", optional = true }
uuid = { path = "../uuid" }
scamplers-macros = { path = "../scamplers-macros" }
reqwest = { workspace = true }
valid-string = { path = "../valid-string" }
pyo3 = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
backend = [
    "diesel",
    "scamplers-schema",
    "uuid/backend",
    "time/backend",
    "valid-string/backend",
]
python = ["pyo3"]

[lints]
workspace = true
