[package]
name = "scamplers"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
deadpool-diesel = { workspace = true, optional = true }
anyhow = { workspace = true }
strum = { workspace = true }
scamplers-schema = { path = "../scamplers-schema", optional = true }
scamplers-macros = { path = "../scamplers-macros" }
thiserror = { workspace = true }
base64 = { workspace = true }
heck = { workspace = true }
axum = { workspace = true }
any-value = { path = "../any-value" }
csv = { workspace = true }
camino = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
serde_json = { workspace = true }
diesel = { workspace = true, optional = true }
serde = { workspace = true }
garde = { workspace = true }
uuid = { path = "../uuid" }
valuable = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
argon2 = { workspace = true }
axum-extra = { workspace = true }
rand = { workspace = true, optional = true }
dotenvy = { workspace = true }
valid-string = { path = "../valid-string" }
bon = { workspace = true }
pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
time = { path = "../time" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
reqwest = { workspace = true, features = [] }
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[features]
app = [
    "axum/tokio",
    "scamplers-schema",
    "any-value/app",
    "time/app",
    "camino",
    "clap",
    "diesel",
    "deadpool-diesel",
    "uuid/app",
    "futures",
    "tokio",
    "testcontainers-modules",
    "tower",
    "tower-http",
    "diesel_migrations",
    "tracing",
    "tracing-subscriber",
    "tracing-appender",
    "rand",
    "valid-string/app",
]
python = [
    "pyo3",
    "pyo3-stub-gen",
    "uuid/python",
    "valid-string/python",
    "any-value/python",
    "time/python",
]


[lints]
workspace = true
