[package]
name = "scamplers"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "scamplers"
required-features = ["app"]

[dependencies]
anyhow = { workspace = true }
strum = { workspace = true }
scamplers-macros = { path = "../scamplers-macros" }
thiserror = { workspace = true }
base64 = { workspace = true }
heck = { workspace = true }
axum = { workspace = true }
any-value = { path = "../any-value" }
csv = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
garde = { workspace = true }
uuid = { path = "../uuid" }
valuable = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
argon2 = { workspace = true }
axum-extra = { workspace = true }
dotenvy = { workspace = true }
valid-string = { path = "../valid-string" }
bon = { workspace = true }
time = { path = "../time" }
scraper = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
camino = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
scamplers-schema = { path = "../scamplers-schema", optional = true }
tokio = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
deadpool-diesel = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[features]
app = [
    "axum/tokio",
    "scamplers-schema",
    "any-value/app",
    "time/app",
    "camino",
    "clap",
    "diesel",
    "deadpool-diesel",
    "uuid/app",
    "futures",
    "tokio",
    "testcontainers-modules",
    "tower",
    "tower-http",
    "diesel_migrations",
    "tracing",
    "tracing-subscriber",
    "tracing-appender",
    "rand",
    "valid-string/app",
]
python = [
    "pyo3",
    "uuid/python",
    "valid-string/python",
    "any-value/python",
    "time/python",
    "tokio",
]


[lints]
workspace = true
