[package]
name = "time"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
js-sys = { workspace = true }
_time = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
valuable = { workspace = true }
wasm-bindgen = { workspace = true }

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
_time = { workspace = true, features = ["wasm-bindgen"] }

[features]
backend = ["diesel", "diesel-async"]
