[package]
name = "time"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
_time = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
valuable = { workspace = true }
pyo3 = { workspace = true, optional = true }

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
_time = { workspace = true, features = ["wasm-bindgen"] }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }

[features]
backend = ["diesel", "diesel-async"]
python = ["pyo3"]
