[package]
name = "time"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
diesel = { workspace = true, optional = true }
_time = { workspace = true }
serde = { workspace = true }
valuable = { workspace = true }
pyo3 = { workspace = true, optional = true }

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
_time = { workspace = true, features = ["wasm-bindgen"] }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }

[features]
app = ["diesel"]
python = ["pyo3"]
