[package]
name = "uuid"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
_uuid = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
valuable = { workspace = true }

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
_uuid = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { workspace = true }

[features]
backend = ["diesel", "diesel-async"]
