[package]
name = "uuid"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
_uuid = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true, optional = true }
valuable = { workspace = true }
pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
_uuid = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }

[features]
app = ["diesel"]
python = ["pyo3", "pyo3-stub-gen"]
